Setup for compute nodes.
Currently, there's something wrong with the network adapter, so this is not yet tested.

--- a/playbooks/inventory.ini
+++ b/playbooks/inventory.ini
@@ -1,2 +1,8 @@
 [head-node]
-clusterfuck.local
+hydra.local
+
+[compute-nodes]
+compute-01.local
+
+[compute-nodes:vars]
+ansible_ssh_common_args='-o ProxyCommand="ssh -W %h:%p -q bard@hydra.local"'
