--- a/playbooks/roles/dhcp-server/tasks/main.yml
+++ b/playbooks/roles/dhcp-server/tasks/main.yml
@@ -24,6 +24,6 @@
 
 - name: Set the hosts file.
   become: true
-  ansible.builtin.copy:
-    src: hosts
+  ansible.builtin.template:
+    src: hosts.j2
     dest: /etc/hosts
