--- a/playbooks/roles/filesystem/tasks/main.yml
+++ b/playbooks/roles/filesystem/tasks/main.yml
@@ -34,11 +34,12 @@
 
 - name: Make shared drive available on network.
   become: true
-  ansible.builtin.lineinfile:
-    path: /etc/exports
-    create: true
-    regexp: '^/mnt/usb/scratch'
-    line: '/mnt/usb/scratch {{ cluster_network_portion }}.0/24(rw,sync)'
+  ansible.builtin.template:
+    src: exports.j2
+    dest: /etc/exports
+    owner: root
+    group: root
+    mode: '644'
 
 - name: Enable and start RPC bind.
   become: true
