Working head-node setup This includes enrollment of the compute nodes to the shared filesystem. The compute nodes will not yet come up entirely cleanly as they need some individual setup. However, that will be covered in a different play.

--- a/playbooks/compute-node-info.yml
+++ b/playbooks/compute-node-info.yml
@@ -1,8 +1,16 @@
 ---
 - name: Aquire compute node info
   hosts: compute-nodes
+  gather_facts: false
+
   vars:
     output_file: '/tmp/compute-node.txt'
+
+  pre_tasks:
+    - ansible.builtin.setup:
+        gather_subset:
+          - 'network'
+
   tasks:
     - name: Get serial number for raspberry pi.
       ansible.builtin.shell: >-
