--- a/playbooks/roles/dhcp-server/tasks/main.yml
+++ b/playbooks/roles/dhcp-server/tasks/main.yml
@@ -27,3 +27,9 @@
   ansible.builtin.template:
     src: hosts.j2
     dest: /etc/hosts
+
+- name: Restart the DHCP server
+  become: true
+  ansible.builtin.systemd_service:
+    name: isc-dhcp-server
+    state: restarted
